@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-libs/liblist/ChangeLog,v 1.2 2009/12/05 22:32:30 nerdboy Exp $
 
+*liblist-2.2.1 (29 Dec 2009)
+
+  29 Dec 2009; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> +liblist-2.2.1.ebuild:
+  Added liblist-2.2.1, the first worthwhile release.
+
   29 Dec 2009; Nathan Phillip Brink (ohnobinki)
   <ohnobinki@ohnopublishing.net> liblist-9999.ebuild,
   -files/liblist-9999-sharedlib.patch:
